// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`helpers ArrayToHash: ArrayToHash 1`] = `
Object {
  "1": Object {
    "name": "1",
    "other": "2",
  },
  "2": Object {
    "name": "2",
    "other": "2",
  },
}
`;

exports[`helpers ArrayToMap: ArrayToMap 1`] = `
Map {
  "1" => Object {
    "name": "1",
    "other": "2",
  },
  "2" => Object {
    "name": "2",
    "other": "2",
  },
}
`;

exports[`helpers ArrayToMap: ArrayToMap with process 1`] = `
Map {
  "1" => Object {
    "key": "1",
    "name": "1",
    "other": "2",
  },
  "2" => Object {
    "key": "2",
    "name": "2",
    "other": "2",
  },
}
`;

exports[`helpers HashToArray: HashToArray 1`] = `
Array [
  Object {
    "name": "1",
    "other": 1,
  },
  Object {
    "name": "2",
    "other": 2,
  },
]
`;

exports[`helpers HashToArray: HashToArray with process 1`] = `
Array [
  Object {
    "name": "1",
    "other": 1,
  },
  Object {
    "name": "2",
    "other": 2,
  },
]
`;

exports[`helpers HashToMap: HashToMap 1`] = `
Map {
  "1" => Object {
    "name": "1",
    "other": 1,
  },
  "2" => Object {
    "name": "2",
    "other": 2,
  },
}
`;

exports[`helpers HashToMap: HashToMap with process 1`] = `
Map {
  "1" => Object {
    "name": "1",
    "other": 1,
  },
  "2" => Object {
    "name": "2",
    "other": 2,
  },
}
`;

exports[`helpers MapToArray: MapToArray 1`] = `
Array [
  Object {
    "name": "1",
    "other": "1",
  },
  Object {
    "name": "3",
    "other": 3,
  },
]
`;

exports[`helpers MapToArray: MapToArray-Values 1`] = `
Array [
  Object {
    "name": "2",
    "other": "1",
  },
  Object {
    "name": "3",
    "other": 3,
  },
]
`;

exports[`helpers MapToHash: MapToHash 1`] = `
Object {
  "1": Object {
    "name": undefined,
    "other": "1",
  },
  "3": Object {
    "name": undefined,
    "other": 3,
  },
}
`;

exports[`helpers MapToHash: MapToHash-Values 1`] = `
Object {
  "key 1": Object {
    "name": "2",
    "other": "1",
  },
  "key 2": Object {
    "name": "3",
    "other": 3,
  },
}
`;

exports[`helpers MapToHash: MapToHash-Values with process 1`] = `
Object {
  "key 1": Object {
    "name": "2",
    "other": "1",
  },
  "key 2": Object {
    "name": "3",
    "other": 3,
  },
}
`;

exports[`helpers stringToScalar 1`] = `
Object {
  "multiplicity": "one",
  "name": "String",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 2`] = `
Object {
  "multiplicity": "one",
  "name": "String",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 3`] = `
Object {
  "multiplicity": "one",
  "name": "String",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 4`] = `
Object {
  "multiplicity": "one",
  "name": "Int",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 5`] = `
Object {
  "multiplicity": "one",
  "name": "Int",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 6`] = `
Object {
  "multiplicity": "one",
  "name": "Int",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 7`] = `
Object {
  "multiplicity": "one",
  "name": "Float",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 8`] = `
Object {
  "multiplicity": "one",
  "name": "Float",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 9`] = `
Object {
  "multiplicity": "one",
  "name": "ID",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 10`] = `
Object {
  "multiplicity": "one",
  "name": "ID",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 11`] = `
Object {
  "multiplicity": "one",
  "name": "Boolean",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 12`] = `
Object {
  "multiplicity": "one",
  "name": "Boolean",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 13`] = `
Object {
  "multiplicity": "one",
  "name": "Url",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 14`] = `
Object {
  "multiplicity": "one",
  "name": "uRl",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 15`] = `
Object {
  "multiplicity": "many",
  "name": "String",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 16`] = `
Object {
  "multiplicity": "many",
  "name": "Int",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 17`] = `
Object {
  "multiplicity": "many",
  "name": "Float",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 18`] = `
Object {
  "multiplicity": "many",
  "name": "ID",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 19`] = `
Object {
  "multiplicity": "many",
  "name": "Boolean",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 20`] = `
Object {
  "multiplicity": "many",
  "name": "Url",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 21`] = `
Object {
  "multiplicity": "many",
  "name": "String",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 22`] = `
Object {
  "multiplicity": "many",
  "name": "Int",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 23`] = `
Object {
  "multiplicity": "many",
  "name": "Float",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 24`] = `
Object {
  "multiplicity": "many",
  "name": "ID",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 25`] = `
Object {
  "multiplicity": "many",
  "name": "Boolean",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 26`] = `
Object {
  "multiplicity": "many",
  "name": "Url",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 27`] = `
Object {
  "multiplicity": "many",
  "name": "String",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 28`] = `
Object {
  "multiplicity": "many",
  "name": "Int",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 29`] = `
Object {
  "multiplicity": "many",
  "name": "Float",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 30`] = `
Object {
  "multiplicity": "many",
  "name": "ID",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 31`] = `
Object {
  "multiplicity": "many",
  "name": "Boolean",
  "type": "scalar",
}
`;

exports[`helpers stringToScalar 32`] = `
Object {
  "multiplicity": "many",
  "name": "Url",
  "type": "scalar",
}
`;
